--- a/page/templates/home.html
+++ b/page/templates/home.html
@@ -6,6 +6,14 @@
     <title>wordcount project</title>
 </head>
 <body>
-    장고 돌아가요~~~
+    <h1>문장을 입력하고 "결과 확인하기" 버튼을 클릭하세요!</h1>
+    <br>
+    <form action="{% url 'result' %}">
+        <textarea name="fulltext" id="" cols="40" row="10"></textarea>
+        <br>
+        <input type="submit" value="결과 확인하기">
+        <br>
+        <a href="{% url 'about' %}">프로젝트 소개</a>
+    </form>
 </body>
 </html>
